[project]
name = "elementary-search"
version = "0.1.0"
description = ""
authors = [
    {name = "BetikuOluwatobi",email = "anthonytobynho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "elementary_search", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
