[project]
name = "elementary-search"
version = "0.1.0"
description = "A lightweight hyperparameter optimization tool using Sobol sequences."
authors = [
    {name = "BetikuOluwatobi",email = "betikuoluwatobi7@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "elementary_search", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/BetikuOluwatobi/elementary-hpo"
"Bug Tracker" = "https://github.com/BetikuOluwatobi/elementary-hpo/issues"
